--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -5,7 +5,8 @@
  */
 
 body {
-    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    /* font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif; */
+		font-family: "Georgia", "Times New Roman", Times, serif;
     background: url('../img/bg.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -20,8 +21,8 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
+    font-family: "Tahoma","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 300;
     letter-spacing: 1px;
 }
 
